Redesign message request screen

--- a/background.html
+++ b/background.html
@@ -33,7 +33,7 @@
       <div class="app-loading-screen">
         <div class="content bchat-full-logo">
           <img src="images/bchat/bchat_logo.svg" class="bchat-brand-logo" />
-          <img src="images/bchat/BChat_text.svg" class="bchat-text-logo" />
+          <img src="images/bchat/BChat_text.svg"  width="400px" height="100px" />
         </div>
       </div>
     </div>
